Refine the misc utils for which